--- a/scripts/Project.toml
+++ b/scripts/Project.toml
@@ -5,5 +5,6 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+QPSReader = "10f199a5-22af-520b-b891-7ce84a7b1bd0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SuperPolyak = "aa2154d2-a8bb-4670-96bc-d5e8b56defb4"
