--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["VHarisop <vharisop@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+ElasticArrays = "fdbdab4c-e67f-52f5-8c3f-e7b388dad3d4"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
